kubernetes/apps/default/sonarr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${instance_name}
spec:
  parentRefs:
    - name: main
      namespace: networking
  hostnames:
    - ${instance_name}.deangalvin.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ${instance_name}
          port: 80
